2001-05-10  Fernando Nasser  <fnasser@redhat.com>

	* symfile.c (symbol_file_add_main_1): New static function. 
	Passes the flags arguments to  symbol_file_add() and takes care
	of any necessary reinitializations.
        (symbol_file_command): Call symbol_file_add_main_1() instead of
        symbol_file_add().  
        (symbol_file_add_main): Ditto.

2001-05-09  Kevin Buettner  <kevinb@redhat.com>

	* lin-lwp.c (lin_lwp_pid_to_str): Revert inadvertent format
	string change in 2001-05-03 changes.
	(lin_lwp_wait): Revert GET_LWP coercion introduced in 2001-05-03
	changes.

2001-05-09  Kevin Buettner  <kevinb@redhat.com>

	* lin-lwp.c (lin_lwp_attach): Use PIDGET() to fetch the pid
	component from inferior_ptid.
	(lin_lwp_detach): Use pid_to_ptid() to convert from a pid to a
	ptid.

2001-05-09  Elena Zannoni  <ezannoni@redhat.com>

	* sh3-rom.c (_initialize_sh3_rom): Get rid of specific _WINDOWS
 	conditional for help with connections through parallel ports,
 	given that the actual code for downloading through a parallel port
 	is not conditionalized.

	* sh-tdep.c: Remove WIN32_WCE conditional. The wince sh target is
 	unmaintaned, and probably on its way to obsolescence.
	
2001-05-09  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c (i386_frame_saved_pc): New function.
	* config/i386/tm-i386.h (FRAME_SAVED_PC): Redefine in terms of
	i386_frame_saved_pc.
	(i386_frame_saved_pc): New prototype.

	* i386-tdep.c (i386_register_virtual_type): New function.
	(i386_register_convertible): New function.
	* config/i386/tm-i386.h (REGISTER_VIRTUAL_TYPE): Redefine in terms
	of i386_register_virtual_type.
	(REGISTER_CONVERTIBLE): Redefine in terms of
	i386_register_convertible.
	(i386_register_virtual_type, i386_register_convertible): New
	prototypes.

2001-05-08  Jim Blandy  <jimb@redhat.com>

	* Makefile.in (mn10300-tdep.o): New rule.

	* Makefile.in (gdb_string_h): Define.  Use it throughout.
	Some rules were already using this, even though it isn't defined.
